--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="AdventUtils.fs" />
     <Compile Include="Day99.fs" />
+    <Compile Include="Day1.fs" />
     <!-- Needs to be included last! -->
     <Compile Include="Program.fs" />
   </ItemGroup>
