--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Day99.fs" />
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
+    <Compile Include="Day3.fs" />
     <!-- Needs to be included last! -->
     <Compile Include="Program.fs" />
   </ItemGroup>
