--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="AdventUtils.fs" />
+    <Compile Include="Utils.fs" />
     <Compile Include="Day99.fs" />
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
