--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Day4.fs" />
     <Compile Include="Day5.fs" />
     <Compile Include="Day6.fs" />
+    <Compile Include="Day7.fs" />
     <!-- Needs to be included last! -->
     <Compile Include="Program.fs" />
   </ItemGroup>
