--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
     <PackageReference Include="ShellProgressBar" Version="5.2.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 
 </Project>
