--- a/Advent2024.fsproj
+++ b/Advent2024.fsproj
@@ -25,6 +25,7 @@
     <Compile Include="Day14.fs" />
     <Compile Include="Day15.fs" />
     <Compile Include="Day16.fs" />
+    <Compile Include="Day17.fs" />
     <!-- Needs to be included last! -->
     <Compile Include="Program.fs" />
   </ItemGroup>
